# furuta_pendulum

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cspell.config.yaml  furuta_pendulum.repos  furuta_pendulum_hardware.repos  furuta_pendulum_simulation.repos
.devcontainer/: Dockerfile  devcontainer.json
config/: config.rviz  controller.yaml  furuta_pendulum.rviz  furuta_pendulum_ignition.config  pendulum_parameters.yaml  (+2 more)
furuta_pendulum_control_toolbox/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
furuta_pendulum_control_toolbox/config/: cost_furuta_pendulum.info  ct_simulation.yaml  lqr_config.info  lqr_cost.info  lqr_with_swingup_controller.yaml  mpc_config.info  mpc_params.yaml  nloc_config.info  simulation.yaml  solver_furuta_pendulum.info
furuta_pendulum_control_toolbox/include/furuta_pendulum/: FurutaPendulum.h  FurutaPendulumControlSimulator.h  FurutaPendulumMPC.h  FurutaPendulumNLOC-impl.h  FurutaPendulumNLOC.h  FurutaPendulumSystem.h
furuta_pendulum_control_toolbox/launch/: controller.launch.py  ct_lqr_controller.launch.py  ct_mpc_controller.launch.py  ct_simulation.launch.py  ct_simulation_nloc.launch.py  ct_simulation_with_mpc_controller.launch.py  gazebo_with_controller.launch.py  simulation.launch.py  simulation_nloc.launch.py  simulation_with_controller.launch.py
furuta_pendulum_control_toolbox/model/: FurutaPendulum.dtdsl  FurutaPendulum.kindsl  furuta_pendulum.urdf
furuta_pendulum_control_toolbox/src/: NLOC_MPC.cpp  controller_node.cpp  ct_demo_simulation_mpc.cpp  ct_demo_simulation_mpc_node.cpp  ct_demo_simulation_node.cpp  ct_furuta_pendulum_lqr.cpp  ct_furuta_pendulum_nloc.cpp  ct_furuta_pendulum_nloc_ros_node.cpp  ct_lqr.cpp  ct_mpc_controller_node.cpp  ct_test.cpp  furuta_pendulum.cpp  furuta_pendulum_lqr.cpp  furuta_pendulum_nloc.cpp  furuta_pendulum_nloc_ros_node.cpp  simulate_furuta_pendulum.cpp
furuta_pendulum_control_toolbox/urdf/: furuta_pendulum.urdf
furuta_pendulum_de/: CHANGELOG.rst  CMakeLists.txt  package.xml
furuta_pendulum_de/config/: de_simulation.yaml  lqr_with_swing_up_controller.yaml  pendulum_parameters.yaml
furuta_pendulum_de/dev_utils/: lqr.ipynb
furuta_pendulum_de/include/furuta_pendulum_de/: controller_node.hpp  de_simulation_node.hpp  lqr_with_swing_up_controller_node.hpp  lqr_with_swingup_controller_node.hpp  simulation_node.hpp
furuta_pendulum_de/launch/: controller.launch.py  de_simulation.launch.py  description.launch.py  gazebo.launch.py  gazebo_with_controller.launch.py  lqr_with_swing_up_controller.launch.py  lqr_with_swingup_controller.launch.py  simulation.launch.py  simulation_with_controller.launch.py
furuta_pendulum_de/src/: controller_node.cpp  de_simulation_node.cpp  lqr.ipynb  lqr_with_swing_up_controller_node.cpp  lqr_with_swingup_controller_node.cpp  simulation_node.cpp
furuta_pendulum_de/urdf/: furuta_pendulum.urdf.xacro
furuta_pendulum_drake/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
furuta_pendulum_drake/config/: controller.yaml  lqr_with_swing_up_controller.yaml  lqr_with_swingup_controller.yaml  params.yaml
furuta_pendulum_drake/launch/: controller.launch.py  gazebo_with_controller.launch.py  simulation_with_controller.launch.py
furuta_pendulum_drake/src/: cart_pole_example_urdf_lqr.cpp  drake_lqr.cpp  furuta_pendulum_urdf_lqr.cpp
furuta_pendulum_drake/urdf/: cart_pole.sdf  furuta_pendulum.urdf
furuta_pendulum_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
furuta_pendulum_gazebo/config/: empty.sdf  furuta_pendulum_ros2_control.yaml
furuta_pendulum_gazebo/launch/: gazebo.launch.py  gazebo_with_controller.launch.py
furuta_pendulum_ocs2/: CMakeLists.txt  README.md  package.xml
furuta_pendulum_ocs2/config/mpc/: task.info
furuta_pendulum_ocs2/include/furuta_pendulum_ocs2/: FurutaPendulumInterface.h  FurutaPendulumParameters.h  definitions.h
furuta_pendulum_ocs2/include/furuta_pendulum_ocs2/dynamics/: FurutaPendulumSystemDynamics.h
furuta_pendulum_ocs2/src/: DummyFurutaPendulumNode.cpp  FurutaPendulumInterface.cpp  FurutaPendulumSimpleExample.cpp
furuta_pendulum_ocs2/src/dynamics/: FurutaPendulumSystemDynamics.cpp
furuta_pendulum_ocs2_ros/: CMakeLists.txt  package.xml
furuta_pendulum_ocs2_ros/config/: controller.yaml  test_simulation.yaml
furuta_pendulum_ocs2_ros/include/furuta_pendulum_ocs2_ros/: FurutaPendulumDummyVisualization.h
furuta_pendulum_ocs2_ros/launch/: furuta_pendulum.launch  furuta_pendulum_mpc_mrt.launch  ocs2_furuta_pendulum_mpc_mrt.launch.py  ocs2_mpc_controller.launch.py  simulation_test.launch.py  visualize.launch.py
furuta_pendulum_ocs2_ros/rviz/: furuta_pendulum.rviz
furuta_pendulum_ocs2_ros/src/: DummyFurutaPendulumNode.cpp  FurutaPendulumDummyVisualization.cpp  FurutaPendulumMpcMrtControllerNode.cpp  FurutaPendulumMpcMrtNode.cpp  FurutaPendulumMpcNode.cpp  FurutaPendulumSimulateTestNode.cpp
furuta_pendulum_rl/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
furuta_pendulum_rl/config/: controller.yaml
furuta_pendulum_rl/dev_utils/: furuta_pendulum_full_a2c.py  furuta_pendulum_full_ddpg.py  furuta_pendulum_full_ppo.py  furuta_pendulum_full_td3.py
furuta_pendulum_rl/launch/: gazebo_with_controller.launch.py  rl_controller.launch.py  simulation_with_controller.launch.py
furuta_pendulum_rl/model/: furuta_pendulum.urdf  furuta_pendulum.xml
furuta_pendulum_rl/src/: export_model.py  export_sac_model.py  furuta_pendulum.py  furuta_pendulum_full.py  furuta_pendulum_full_generate_expert_data.py  furuta_pendulum_full_imitation.py  furuta_pendulum_full_sac.py  furuta_pendulum_full_test_expert.py  furuta_pendulum_ppo.py  furuta_pendulum_swing_up.py  furuta_pendulum_swing_up_ppo.py  furuta_pendulum_swing_up_sac.py  furuta_pendulum_swingup.py  furuta_pendulum_swingup_ppo.py  furuta_pendulum_upward_stabilization.py  furuta_pendulum_upward_stabilization_ppo.py  lqr_expert.py  rl_controller_node.cpp  test_furuta_pendulum_full_env.ipynb  utils.py
furuta_pendulum_rl/trained_agents/: furuta_pendulum_full.pt  furuta_pendulum_full_pretrained_high_variance.pt  furuta_pendulum_full_pretrained_sde.pt
(+104 files in other folders)
