<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>furuta_pendulum_de</name>
  <version>1.0.0</version>

  <description>TODO: Package description</description>

  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>
  <license>GPLv3</license>

  <author email="macorobots@gmail.com">Maciej Stępień</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>Eigen</build_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>