<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>furuta_pendulum_gazebo</name>
  <version>1.0.0</version>

  <description>TODO: Package description</description>

  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>
  <license>GPLv3</license>

  <author email="macorobots@gmail.com">Maciej Stępień</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <!-- Ignition dependency is specified in the ros_gz_sim package,
    version can chosen using GZ_VERSION (or IGNITION_VERSION) env variable,
    for details refer to the ros_gz_sim package -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>